# llvm-project

./: rebuild_cpu0.sh  toy_build.sh  toy_test.sh
.github/: README.md
clang/lib/Basic/: Targets.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  TargetInfo.cpp
clang/test/Preprocessor/: init.c
llvm/: CMakeLists.txt
llvm/include/llvm/: module.modulemap
llvm/lib/CodeGen/: ExpandLargeDivRem.cpp  MachineFunction.cpp
llvm/lib/IR/: Function.cpp
llvm/lib/Object/: ELF.cpp
llvm/lib/ObjectYAML/: ELFYAML.cpp
llvm/lib/Support/: Triple.cpp
llvm/tools/llc/: llc.cpp
llvm/tools/llvm-mctoll/: CMakeLists.txt
llvm/tools/llvm-objdump/: llvm-objdump.cpp
llvm/tools/llvm-readobj/: ELFDumper.cpp
mctoll/: Makefile  bsearch.c  float.c  hello.c  mctoll_build.sh  return_struct.h
mlir/: CMakeLists.txt
mlir/Tooy/: CMakeLists.txt
mlir/Tooy/include/toy/: CMakeLists.txt  Dialect.h  NeedIntTypeTrait.h  Ops.td  Parser.h
mlir/Tooy/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.cpp  ToyCombine.td
playground/: Makefile  clang_build.sh  llvm_build.sh  qemu-gdb.sh  test.c
tooy/: .gitignore  Makefile  and.toy  codegen.toy  div_combine.toy  scalar.toy  test.toy  tooy_build.sh
toy/: .gitignore  Makefile  arith.c  build_arith.c  build_array.c  build_brcc.c  build_bsearch.c  build_call.c  build_call2.c  build_call3.c  build_data_type.c  build_qsort.c  build_setcc.c  build_stack_argument.c  clang_build.sh  float.c  return_struct.main.c  run_array.c  run_brcc.c  run_bsearch.c  run_call.c  run_call2.c  run_data_type.c  run_qsort.c  run_setcc.c  run_stack_argument.c  stack_argument.c  toy_build.sh
toy_test/: main.c  test.c
(+72 files in other folders)
